--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
+                    <span class="author-block"> Institute for AI Industry Research (AIR), Tsinghua University,<br>ICRA 2025</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
 
@@ -81,9 +81,9 @@
                         <span>Paper</span>
                       </a>
                     </span>
-
+                    
                     <!-- Supplementary PDF link -->
-                    <span class="link-block">
+                    <!--<span class="link-block">
                       <a href="static/pdfs/supplementary_material.pdf" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
@@ -91,7 +91,7 @@
                       </span>
                       <span>Supplementary</span>
                     </a>
-                  </span>
+                  </span>-->
 
                   <!-- Github link -->
                   <span class="link-block">
