--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
 
 <!-- Image carousel -->
 <section class="hero is-small">
+  <h2 class="title is-3">Results</h2>
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
