--- a/index.html
+++ b/index.html
@@ -171,28 +171,28 @@
         <!-- Your image here -->
         <img src="static/images/chameleon1.png" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          First image description.
+          The vehicle has just passed the intersection.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
         <img src="static/images/chameleon2.png" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          Second image description.
+          There is a left-turn traffic light ahead.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
         <img src="static/images/chameleon3.png" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-         Third image description.
+         The ground lane is marked with a straight-ahead sign.
        </h2>
      </div>
      <div class="item">
       <!-- Your image here -->
       <img src="static/images/chameleon4.png" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
-        Fourth image description.
+        The vehicle is on a one-way right-turn lane
       </h2>
     </div>
   </div>
