--- a/index.html
+++ b/index.html
@@ -167,28 +167,28 @@
   <div class="hero-body">
     <div class="container" style="text-align: center;">
       <div id="results-carousel" class="carousel results-carousel">
-        <div class="item">
+        <div class="item"style="text-align: center;">
           <!-- Your image here -->
           <img src="static/images/chameleon1.png" alt="MY ALT TEXT" />
           <h2 class="subtitle has-text-centered">
             The vehicle has just passed the intersection.
           </h2>
         </div>
-        <div class="item">
+        <div class="item"style="text-align: center;">
           <!-- Your image here -->
           <img src="static/images/chameleon2.png" alt="MY ALT TEXT" />
           <h2 class="subtitle has-text-centered">
             There is a left-turn traffic light ahead.
           </h2>
         </div>
-        <div class="item">
+        <div class="item"style="text-align: center;">
           <!-- Your image here -->
           <img src="static/images/chameleon3.png" alt="MY ALT TEXT" />
           <h2 class="subtitle has-text-centered">
             The ground lane is marked with a straight-ahead sign.
           </h2>
         </div>
-        <div class="item">
+        <div class="item"style="text-align: center;">
           <!-- Your image here -->
           <img src="static/images/chameleon4.png" alt="MY ALT TEXT" />
           <h2 class="subtitle has-text-centered">
