--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 <!-- Image carousel -->
 <section class="hero is-small">
-  <h2 class="title is-3">Results</h2>
+  <h2 class="title">Result</h2>
   <div class="hero-body">
     <div class="container" style="text-align: center;">
       <div id="results-carousel" class="carousel results-carousel">
