--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 <section class="hero is-small">
   
   <div class="hero-body">
-    <h2 class="title">Result</h2>
+<!--     <h2 class="title">Result</h2> -->
     <div class="container" style="text-align: center;">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item"style="text-align: center;">
