--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
   <div class="hero-body">
 <!--     <h2 class="title">Result</h2> -->
     <div class="container" style="text-align: center;">
+      <h2 class="title">Results</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item"style="text-align: center;">
           <!-- Your image here -->
