--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"> Institute for AI Industry Research (AIR), Tsinghua University,<br>ICRA 2025</span>
+                    <span class="author-block"> Institute for AI Industry Research (AIR), Tsinghua University<br>Bosch Corporate Research<br>Institute for Interdisciplinary Information Sciences(IIIS), Tsinghua University<br>ICRA 2025</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
 
