--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 <!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
      <h2 class="title is-3">Framework</h2>
     <div class="hero-body">
       <img src="static/images/main.png" alt="MY ALT TEXT"/>      
@@ -227,6 +228,7 @@
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
+      <div class="columns is-centered has-text-centered">
       <h2 class="title">BibTeX</h2>
       <pre><code>BibTex Code Here</code></pre>
     </div>
