--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
 <!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
      <h2 class="title is-3">Framework</h2>
     <div class="hero-body">
       <img src="static/images/main.png" alt="MY ALT TEXT"/>      
